--- a/src/gradeApp/gradeAppTemplate.html
+++ b/src/gradeApp/gradeAppTemplate.html
@@ -3,12 +3,27 @@
 <input on-enter="onBlur" class="newGradeInput" placeholder="Enter a new name">
 <input on-enter="onBlur" class="newGradeInput" placeholder="Enter a new grade">
 <button on-click="newGrade">Save</button>
-
+<hr>
 <ul class="gradesList">
     {{#grades:i}}
         {{>gradeItem}}
     {{/grades}}
 </ul>
+<hr>
+<div class="statisticPanel">
+    <h3>Total Class Statistics</h3>
+    <div>
+        Average: {{statistics.averageGrade}}
+    </div>
+    <div>
+        Minimum: {{statistics.minimumGrade}}
+    </div>
+    <div>
+        Maximum: {{statistics.maximumGrade}}
+    </div>
+</div>
+
+
 
 <!-- {{>gradeItem}} -->
 <li class='{{ failing ? "failing" : "" }}'>
